--- a/style.css
+++ b/style.css
@@ -238,8 +238,8 @@ form {
   position: absolute;
   top: 65vh;
   left: 100px;
-  font-family: 'Shadows Into Light', cursive;
-  font-size:40px;
+  font-family:  'Cinzel', serif;
+  font-size:20px;
   line-height: 40px;
   color: white;
   transition: 1s;
